@@ -1,3 +1,15 @@
+Thu Feb 12 19:42:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* compile.c (compile_array_, defined_expr, iseq_compile_each): hide
+	  and freeze internal literal objects, to prevent from modifying.
+	  [ruby-dev:37959]
+
+	* iseq.c (insn_operand_intern): copy internal literal objects.
+
+	* insns.def (putstring, duparray): ditto.
+
+	* string.c (rb_str_replace): exported.
+
 Thu Feb 12 17:17:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/stringio/stringio.c (strio_ungetc): calculates new position
